Login Validation and Next Page

--- a/SalesManagement/Views/Home/Login.cshtml
+++ b/SalesManagement/Views/Home/Login.cshtml
@@ -1,4 +1,5 @@
-﻿<style type="text/css">
+﻿@model LoginModel
+<style type="text/css">
     .login-form {
         width: 385px;
         margin: 30px auto;
@@ -67,19 +68,33 @@
 </style>
 
 <div class="login-form">
-    <form action="/examples/actions/confirmation.php" method="post">
+    <form asp-controller="Home" asp-action="Login" method="post">
         <h2 class="text-center">Sistema de Vendas</h2>
+
+        @{  try
+            {
+                var erro = TempData["ErrorLogin"];
+                <h5 class="text-danger" style="text-align:center">@erro</h5> 
+        
+            }catch
+            {
+            }
+        }
+
+
         <div class="form-group">
             <div class="input-group">
                 <span class="input-group-addon"><i class="fa fa-user"></i></span>
-                <input type="text" class="form-control" name="username" placeholder="Email" required="required">
+                <input type="text" class="form-control" asp-for="Email" placeholder="Email">
             </div>
+            <span asp-validation-for="Email" class="text-danger"></span>
         </div>
         <div class="form-group">
             <div class="input-group">
                 <span class="input-group-addon"><i class="fa fa-lock"></i></span>
-                <input type="password" class="form-control" name="password" placeholder="Senha" required="required">
+                <input type="password" class="form-control" asp-for="Senha" placeholder="Senha">
             </div>
+            <span asp-validation-for="Senha" class="text-danger"></span>
         </div>
         <div class="form-group">
             <button type="submit" class="btn btn-primary login-btn btn-block">Entrar</button>
