--- a/SalesManagement/Views/Shared/_Layout.cshtml
+++ b/SalesManagement/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
     </environment>
 </head>
-<body>
+<body onload="CarregarUsuarioLogado()">
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -37,6 +37,11 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Login">Entrar no Sistema</a></li>
                 </ul>
+
+                @using Microsoft.AspNetCore.Http
+                @inject IHttpContextAccessor HttpContextAccessor
+                <div id="NomeUsuarioLogado"></div>
+
             </div>
         </div>
     </nav>
@@ -73,5 +78,18 @@
     </environment>
 
     @RenderSection("Scripts", required: false)
+    <script>
+        function CarregarUsuarioLogado() {
+            let nome = '@HttpContextAccessor.HttpContext.Session.GetString("NomeUsuarioLogado")';
+
+            if (nome != "") {
+                let divNome = document.getElementById("NomeUsuarioLogado");
+                divNome.innerHTML = "Olá " + nome + "<a href='../Home/Login/0'>(Sair)</a>";
+                divNome.style = "color:#ffffff; padding-top: 15px;";
+            } else {
+                window.location.href = "../Home/Login"
+            }
+        }
+    </script>
 </body>
 </html>
