--- a/SalesManagement/Views/Home/Login.cshtml
+++ b/SalesManagement/Views/Home/Login.cshtml
@@ -1,11 +1,11 @@
 ﻿@model LoginModel
 
-@{
-    Layout = null;
+@{ 
+    Layout = null; //Cancela o uso do layout template
 }
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
 
 <style type="text/css">
     .login-form {
@@ -13,16 +13,16 @@
         margin: 30px auto;
     }
 
-        .login-form form {
-            margin-bottom: 15px;
-            background: #f7f7f7;
-            box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-            padding: 30px;
-        }
+    .login-form form {
+        margin-bottom: 15px;
+        background: #f7f7f7;
+        box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+        padding: 30px;
+    }
 
-        .login-form h2 {
-            margin: 0 0 15px;
-        }
+    .login-form h2 {
+        margin: 0 0 15px;
+    }
 
     .form-control, .login-btn {
         min-height: 38px;
@@ -44,9 +44,9 @@
         opacity: 1;
     }
 
-        .social-btn .btn:hover {
-            opacity: 0.9;
-        }
+    .social-btn .btn:hover {
+        opacity: 0.9;
+    }
 
     .social-btn .btn-primary {
         background: #507cc0;
@@ -66,43 +66,40 @@
         border-top: 1px solid #ccc;
     }
 
-        .or-seperator i {
-            padding: 0 10px;
-            background: #f7f7f7;
-            position: relative;
-            top: -11px;
-            z-index: 1;
-        }
+    .or-seperator i {
+        padding: 0 10px;
+        background: #f7f7f7;
+        position: relative;
+        top: -11px;
+        z-index: 1;
+    }
 </style>
-
-
 <div class="login-form">
     <form asp-controller="Home" asp-action="Login" method="post">
-        <h2 class="text-center">Sistema de Vendas</h2>
+        <h2 class="text-center">Sistema Vendas</h2>
 
-        @{ try
+        @{ 
+            try
             {
-                var erro = TempData["ErrorLogin"];
-                <h5 class="text-danger" style="text-align:center">@erro</h5>
-
+                var erro = TempData["ErrorLogin"].ToString();
+                <h5 class="text-danger">@erro</h5>
             }
             catch
             {
+
             }
         }
-
-
         <div class="form-group">
             <div class="input-group">
-                <span class="input-group-addon"><i class="fa fa-user"></i></span>
-                <input type="text" class="form-control" asp-for="Email" placeholder="Email">
+                <span class="input-group-addon"><i class="fa fa-user"></i></span>                
+                <input type="text" class="form-control" asp-for="Email" placeholder="Email">                
             </div>
             <span asp-validation-for="Email" class="text-danger"></span>
         </div>
         <div class="form-group">
             <div class="input-group">
                 <span class="input-group-addon"><i class="fa fa-lock"></i></span>
-                <input type="password" class="form-control" asp-for="Senha" placeholder="Senha">
+                <input type="password" class="form-control" asp-for="Senha" placeholder="Senha">                
             </div>
             <span asp-validation-for="Senha" class="text-danger"></span>
         </div>
@@ -114,8 +111,5 @@
             <a href="#" class="pull-right">Esqueceu a senha?</a>
         </div>
     </form>
-    <p class="text-center text-muted small">Não tem uma conta? <a href="#">Crie Aqui!</a></p>
+    <p class="text-center text-muted small">Não tem uma conta?<a href="#"> Crie aqui!</a></p>
 </div>
-
-
-
