--- a/SalesManagement/Views/_ViewImports.cshtml
+++ b/SalesManagement/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using SalesManagement
+@using SalesManagement
 @using SalesManagement.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
